# pipeline_highway_event

./: .gitignore  ARCHITECTURE_DESIGN.md  BATCH_IMPLEMENTATION_README.md  BATCH_PIPELINE_DESIGN.md  CLEAN_INTERFACE_README.md  CMakeLists.txt  DEMO_README.md  DETECTION_ORDER_TEST.md  IMAGEDATA_UPDATE_SUMMARY.md  INFINITE_STRESS_TEST_GUIDE.md  LOG_OPTIMIZATION_SUMMARY.md  MEMORY_OPTIMIZATION_ANALYSIS.md  ORDER_FIX_SUMMARY.md  PIPELINE_FIX_SUMMARY.md  PIPELINE_STOP_IMPROVEMENTS.md  README.md  build.sh  example_usage.cpp  highway_event_demo.cpp  log4cplus.properties  run_demo.sh  run_test.sh  simple_usage_example.cpp  test_memory_monitor.sh
include/: batch_data.h  batch_event_determine.h  batch_mask_postprocess.h  batch_object_detection.h  batch_object_tracking.h  batch_pipeline_manager.h  batch_semantic_segmentation.h  box_event.h  box_filter.h  event_determine.h  event_type.h  event_utils.h  highway_event.h  image_data.h  image_processor.h  logger_manager.h  mask_postprocess.h  memory_monitor.h  memory_pool.h  object_detection.h  object_tracking.h  pipeline_config.h  pipeline_manager.h  process_mask.h  seg_utils.h  semantic_segmentation.h  thread_pool.h  thread_safe_queue.h
jni/: EventYoloCoor.java  HighwayAlgorParam.java  HighwayAlgors.java  HighwayEventType.java  HighwayExample.java  MatRef.java  MatRefWithExtArgs.java  MatRefWithYoloCoors.java  TestModelPathParsing.java  YoloCoor.java  cn_xtkj_jni_algor_HighwayAlgors.cpp  cn_xtkj_jni_algor_HighwayAlgors.h
src/: batch_data.cpp  batch_event_determine.cpp  batch_mask_postprocess.cpp  batch_object_detection.cpp  batch_object_tracking.cpp  batch_pipeline_example.cpp  batch_pipeline_manager.cpp  batch_semantic_segmentation.cpp  box_filter.cpp  event_determine.cpp  event_utils.cc  highway_event.cpp  image_data.cpp  image_processor.cpp  logger_manager.cpp  main.cpp  mask_postprocess.cpp  memory_monitor.cpp  object_detection.cpp  object_tracking.cpp  pipeline_manager.cpp  process_mask.cu  seg_utils.cc  semantic_segmentation.cpp  thread_pool.cpp
